--- a/Version2/Stable_V2.ipynb
+++ b/Version2/Stable_V2.ipynb
@@ -14,7 +14,7 @@
     "current_dir_path = os.path.dirname(current_file_path)\n",
     "parent_dir_path = os.path.dirname(current_dir_path)\n",
     "\n",
-    "os.chdir(current_dir_path)\n",
+    "os.chdir(current_dir_path + '\\\\ultils')\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -42,68 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e172d63-8c13-485a-896b-7a4da115f35d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"./Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
-    "data2 = pd.read_csv(\"./Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
-    "data3 = pd.read_csv(\"./Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
-    "data4 = pd.read_csv(\"./Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
-    "data5 = pd.read_csv(\"./Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
-    "data6 = pd.read_csv(\"./Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "data1 = pd.read_csv(\"../Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"../Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"../Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"../Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"../Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "data6 = pd.read_csv(\"../Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
     "\n",
     "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6], ignore_index=True)\n",
     "\n",
-    "dataA1 = pd.read_csv(\"./Data/NPA_TMA1_new.csv\")[:-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f3168a71-360c-40fd-9ac6-5287aa37dcdb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(189216, 51)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataA2[dataA2['當事者順位'] == 1].shape"
+    "dataA1 = pd.read_csv(\"../Data/NPA_TMA1_new.csv\")[:-2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c509cf2-4f62-46c1-9526-8d405b7dd20a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(787, 51)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataA1[dataA1['當事者順位'] == 1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "7f6e308f-5a50-45cd-8f5a-0c14c9a36ad8",
    "metadata": {},
    "outputs": [],
@@ -121,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "e8cd8dff-91d5-4e8b-88a1-0fc14fc6583d",
    "metadata": {},
    "outputs": [],
@@ -180,17 +138,18 @@
     "        rbind_data = process_age(rbind_data)\n",
     "\n",
     "    dist_df = process_data(rbind_data)\n",
-    "    scaler = StandardScaler()\n",
-    "\n",
-    "    full_dist = pd.DataFrame(scaler.fit_transform(dist_df), columns = dist_df.columns)\n",
-    "    X1 = full_dist.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
+    "    \n",
+    "    # scaler = StandardScaler()\n",
+    "    # full_dist = pd.DataFrame(scaler.fit_transform(dist_df), columns = dist_df.columns)\n",
+    "    # X1 = full_dist.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
+    "    X1 = dist_df.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
     "\n",
     "    lens1 = PCA(10).fit_transform(X1)\n",
     "\n",
     "    mapper_algo1 = MapperAlgorithm(\n",
     "        cover = CubicalCover(\n",
-    "            n_intervals = 3,\n",
-    "            overlap_frac = 0.5\n",
+    "            n_intervals = 4,\n",
+    "            overlap_frac = 0.6\n",
     "        ),\n",
     "        clustering = FailSafeClustering(\n",
     "            clustering = AgglomerativeClustering(3, linkage='ward'),\n",
@@ -200,15 +159,15 @@
     "\n",
     "    mapper_plot1 = MapperLayoutInteractive(\n",
     "        mapper_graph1,\n",
-    "        colors = dist_df[['路面狀況-路面狀態名稱']].to_numpy(),\n",
+    "        colors = dist_df[['事故類型及型態大類別名稱']].to_numpy(),\n",
     "        cmap = 'jet',\n",
     "        # agg = np.nanmean,\n",
     "        agg = most_frequent_nonan,\n",
     "        dim = 3,\n",
     "        iterations = 30,\n",
     "        seed = 6,\n",
-    "        width = 300,\n",
-    "        height = 300)\n",
+    "        width = 600,\n",
+    "        height = 600)\n",
     "    \n",
     "    return mapper_plot1"
    ]
@@ -248,19 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "143d9fbd-3cb8-48ab-96f6-dfc45f29d226",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1345.5258399676507\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapper_plot1 = resample_plot(dataA1, dataA2, select_lst)\n",
     "# full_info = get_full_info(mapper_plot1)\n",
@@ -271,10 +221,10 @@
     "# db = calinski_data[2]\n",
     "# n_clusters_ = calinski_data[4]\n",
     "\n",
-    "print(n_clusters_)\n",
+    "# print(n_clusters_)\n",
     "\n",
-    "fig_mean1 = mapper_plot1.plot()\n",
-    "fig_mean1.show(config={'scrollZoom': True})"
+    "# fig_mean1 = mapper_plot1.plot()\n",
+    "# fig_mean1.show(config={'scrollZoom': True})"
    ]
   },
   {
