--- a/Version3/道路分析_dummy.ipynb
+++ b/Version3/道路分析_dummy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 1,
    "id": "f86ea7dc-6799-42a5-8e84-aa0f6422f5f9",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,6 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cluster import DBSCAN, AgglomerativeClustering\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import silhouette_score, confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
     "from tdamapper.core import MapperAlgorithm\n",
     "from tdamapper.cover import CubicalCover\n",
@@ -39,12 +38,13 @@
     "from functions import *\n",
     "from chi import *\n",
     "from regressionP import *\n",
-    "from models import *"
+    "from models import *\n",
+    "from utils_v3 import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "id": "2d35c7e7-b928-434e-b417-3e3e7b30a96e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 4,
    "id": "4c2893a2-e2d8-4f96-baf0-8e21c99fddbe",
    "metadata": {},
    "outputs": [
@@ -101,9 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "id": "67f48fe7-015a-4852-b473-50c5bd763c78",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -314,7 +316,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 4,
    "id": "c056f615-c338-4bb5-a9d2-2c659d00f454",
    "metadata": {},
    "outputs": [
@@ -589,7 +591,7 @@
        "[5 rows x 153 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,18 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4f8a9384-66a6-4558-b53d-c04697221d3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in dummy_data.columns:\n",
-    "#     print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 5,
    "id": "cbf3b8be-8455-44ea-abda-59837183de66",
    "metadata": {},
    "outputs": [
@@ -629,9 +620,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.21915131 0.33206138 0.42858152 0.49193792 0.54498375]\n",
-      "0.5449837519353223\n",
-      "[0.21915131 0.11291007 0.09652014 0.0633564  0.05304583]\n"
+      "[0.21915131 0.33206138 0.42858152 0.49193792 0.54498343]\n",
+      "0.5449834330067128\n",
+      "[0.21915131 0.11291007 0.09652014 0.0633564  0.05304552]\n"
      ]
     }
    ],
@@ -748,15 +739,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 23,
    "id": "62ebfe06-7d7d-4fd9-b985-931fc2900963",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "11/17/2024 08:59:06 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:07 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:08 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:09 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 08:59:11 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 08:59:13 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 08:59:13 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
+      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
+      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
+      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
+      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
+      "11/17/2024 08:59:18 AM clustering WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
+      "11/17/2024 08:59:19 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 08:59:19 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 2 leaves.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.54893136024475\n"
+      "29.429375886917114\n"
      ]
     }
    ],
@@ -770,7 +788,7 @@
     "    ),\n",
     "    clustering = FailSafeClustering(\n",
     "        clustering = AgglomerativeClustering(10, linkage='ward'),\n",
-    "        verbose = False)\n",
+    "        verbose = True)\n",
     ")\n",
     "\n",
     "mapper_graph1 = mapper_algo1.fit_transform(mapper_numpy, lens1)\n",
@@ -782,32 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "cf88bf13-a4af-430f-89f6-3144999333e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['號誌-號誌種類名稱_無號誌',\n",
-       " '號誌-號誌種類名稱_行車管制號誌',\n",
-       " '號誌-號誌種類名稱_行車管制號誌(附設行人專用號誌)',\n",
-       " '號誌-號誌種類名稱_閃光號誌']"
-      ]
-     },
-     "execution_count": 220,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matching_columns = [col for col in data_to_map.columns if \"號誌-號誌種類名稱\" in col]\n",
-    "matching_columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 9,
    "id": "7378f777-4701-4a73-99f1-82a61ec14739",
    "metadata": {
     "tags": []
@@ -825,82 +818,84 @@
     "    iterations = 100,\n",
     "    seed = 6,\n",
     "    width = 800,\n",
-    "    height = 500)\n",
-    "\n",
-    "fig_mean1 = mapper_plot1.plot()\n",
-    "fig_mean1.show(config={'scrollZoom': True})"
+    "    height = 500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 11,
+   "id": "8c2d4b32-5829-4c5d-971c-68cf2c931b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig_mean1 = mapper_plot1.plot()\n",
+    "# fig_mean1.show(config={'scrollZoom': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "12ce97d2-a6f2-4ab7-b976-666a486d3625",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    0.584801\n",
-       "0    0.415199\n",
-       "Name: 號誌-號誌種類名稱_無號誌, dtype: float64"
+       "0    0.995284\n",
+       "1    0.004624\n",
+       "2    0.000077\n",
+       "3    0.000015\n",
+       "Name: 死亡, dtype: float64"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_to_map['號誌-號誌種類名稱_無號誌'].value_counts(normalize=True)"
+    "rbind_data['死亡'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 12,
+   "id": "cf88bf13-a4af-430f-89f6-3144999333e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matching_columns = [col for col in data_to_map.columns if \"死亡\" in col]\n",
+    "matching_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "e5169998-6b3e-4f02-b8d1-5b1e66d56676",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper_plot1.update(\n",
-    "    colors=data_to_map[['號誌-號誌種類名稱_無號誌']].to_numpy(),\n",
-    "    cmap='jet', \n",
-    "    # agg=average_encoded_label,\n",
-    "    # agg = np.nanmean,\n",
-    "    agg = most_frequent_nonan,\n",
-    ")\n",
+    "# mapper_plot1.update(\n",
+    "#     colors=rbind_data[['受傷']].to_numpy(),\n",
+    "#     cmap='jet', \n",
+    "#     # agg=average_encoded_label,\n",
+    "#     # agg = np.nanmean,\n",
+    "#     agg = average_encoded_label,\n",
+    "# )\n",
     "\n",
     "# fig_std = mapper_plot1.plot()\n",
     "# fig_std.show(config={'scrollZoom': True})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "id": "25c212a7-c5dd-4f15-b4b5-f1f26b078e6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "def average_encoded_label(data):\n",
-    "    # 轉換為 NumPy 陣列，保持物件型態\n",
-    "    data = np.array(data, dtype=object)\n",
-    "    \n",
-    "    # 移除 NaN 值\n",
-    "    clean_data = data[~pd.isnull(data)]\n",
-    "    \n",
-    "    # 如果沒有數據，返回 NaN\n",
-    "    if clean_data.size == 0:\n",
-    "        return np.nan\n",
-    "    \n",
-    "    # 使用 LabelEncoder 將類別型資料轉換為數值標籤\n",
-    "    le = LabelEncoder()\n",
-    "    encoded_labels = le.fit_transform(clean_data)\n",
-    "    \n",
-    "    # 計算標籤的平均值\n",
-    "    average_value = np.mean(encoded_labels)\n",
-    "    \n",
-    "    return average_value"
    ]
   },
   {
