--- a/Version3/道路分析_dummy.ipynb
+++ b/Version3/道路分析_dummy.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "f86ea7dc-6799-42a5-8e84-aa0f6422f5f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/wangqiqian/Desktop/TrafficTDApython\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -14,7 +22,9 @@
     "current_dir_path = os.path.dirname(current_file_path)\n",
     "parent_dir_path = os.path.dirname(current_dir_path)\n",
     "\n",
-    "os.chdir(current_dir_path + '\\\\ultils')\n",
+    "# os.chdir(current_dir_path + '\\\\ultils')\n",
+    "os.chdir(current_dir_path + '/ultils')\n",
+    "print(current_dir_path)\n",
     "\n",
     "import pickle\n",
     "import time\n",
@@ -28,70 +38,52 @@
     "from sklearn.cluster import DBSCAN, AgglomerativeClustering\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "from tdamapper.core import MapperAlgorithm\n",
-    "from tdamapper.cover import CubicalCover\n",
-    "from tdamapper.clustering import FailSafeClustering\n",
-    "from tdamapper.plot import MapperLayoutInteractive, MapperLayoutStatic\n",
-    "\n",
     "from sklearn import metrics\n",
     "\n",
     "from functions import *\n",
     "from chi import *\n",
     "from regressionP import *\n",
     "from models import *\n",
-    "from utils_v3 import *"
+    "from utils_v3 import *\n",
+    "\n",
+    "os.chdir('/Users/wangqiqian/Desktop/TrafficTDApython/')\n",
+    "\n",
+    "from Version3.tdamapper.core import MapperAlgorithm\n",
+    "from Version3.tdamapper.cover import CubicalCover\n",
+    "from Version3.tdamapper.clustering import FailSafeClustering\n",
+    "from Version3.tdamapper.plot import MapperLayoutInteractive, MapperLayoutStatic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "2d35c7e7-b928-434e-b417-3e3e7b30a96e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"../Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
-    "data2 = pd.read_csv(\"../Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
-    "data3 = pd.read_csv(\"../Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
-    "data4 = pd.read_csv(\"../Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
-    "data5 = pd.read_csv(\"../Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
-    "data6 = pd.read_csv(\"../Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
-    "data7 = pd.read_csv(\"../Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
-    "data8 = pd.read_csv(\"../Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
-    "data9 = pd.read_csv(\"../Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
-    "data10 = pd.read_csv(\"../Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
+    "data1 = pd.read_csv(\"Data/NPA_TMA2_1.csv\", low_memory=False)[:-2]\n",
+    "data2 = pd.read_csv(\"Data/NPA_TMA2_2.csv\", low_memory=False)[:-2]\n",
+    "data3 = pd.read_csv(\"Data/NPA_TMA2_3.csv\", low_memory=False)[:-2]\n",
+    "data4 = pd.read_csv(\"Data/NPA_TMA2_4_new.csv\", low_memory=False)[:-2]\n",
+    "data5 = pd.read_csv(\"Data/NPA_TMA2_5.csv\", low_memory=False)[:-2]\n",
+    "# data6 = pd.read_csv(\"../Data/NPA_TMA2_6_new.csv\", low_memory=False)[:-2]\n",
+    "# data7 = pd.read_csv(\"../Data/NPA_TMA2_7.csv\", low_memory=False)[:-2]\n",
+    "# data8 = pd.read_csv(\"../Data/NPA_TMA2_8.csv\", low_memory=False)[:-2]\n",
+    "# data9 = pd.read_csv(\"../Data/NPA_TMA2_9.csv\", low_memory=False)[:-2]\n",
+    "# data10 = pd.read_csv(\"../Data/NPA_TMA2_10.csv\", low_memory=False)[:-2]\n",
     "\n",
-    "dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "# dataA2 = pd.concat([data1, data2, data3, data4, data5, data6, data7, data8, data9, data10], ignore_index=True)\n",
+    "dataA2 = pd.concat([data1, data2, data3, data4, data5], ignore_index=True)\n",
     "\n",
-    "dataA1 = pd.read_csv(\"../Data/NPA_TMA1_V3.csv\")[:-2]"
+    "dataA1 = pd.read_csv(\"Data/NPA_TMA1_V3.csv\")[:-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4c2893a2-e2d8-4f96-baf0-8e21c99fddbe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3631, 51)\n",
-      "(664995, 51)\n",
-      "Index(['發生年度', '發生月份', '發生日期', '發生時間', '事故類別名稱', '處理單位名稱警局層', '發生地點', '天候名稱',\n",
-      "       '光線名稱', '道路類別-第1當事者-名稱', '速限-第1當事者', '道路型態大類別名稱', '道路型態子類別名稱',\n",
-      "       '事故位置大類別名稱', '事故位置子類別名稱', '路面狀況-路面鋪裝名稱', '路面狀況-路面狀態名稱', '路面狀況-路面缺陷名稱',\n",
-      "       '道路障礙-障礙物名稱', '道路障礙-視距品質名稱', '道路障礙-視距名稱', '號誌-號誌種類名稱', '號誌-號誌動作名稱',\n",
-      "       '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-      "       '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱', '事故類型及型態大類別名稱',\n",
-      "       '事故類型及型態子類別名稱', '肇因研判大類別名稱-主要', '肇因研判子類別名稱-主要', '死亡受傷人數', '當事者順位',\n",
-      "       '當事者區分-類別-大類別名稱-車種', '當事者區分-類別-子類別名稱-車種', '當事者屬-性-別名稱', '當事者事故發生時年齡',\n",
-      "       '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', '當事者行動狀態大類別名稱', '當事者行動狀態子類別名稱',\n",
-      "       '車輛撞擊部位大類別名稱-最初', '車輛撞擊部位子類別名稱-最初', '車輛撞擊部位大類別名稱-其他', '車輛撞擊部位子類別名稱-其他',\n",
-      "       '肇因研判大類別名稱-個別', '肇因研判子類別名稱-個別', '肇事逃逸類別名稱-是否肇逃', '經度', '緯度'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(dataA1.shape)\n",
     "print(dataA2.shape)\n",
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "67f48fe7-015a-4852-b473-50c5bd763c78",
    "metadata": {
     "tags": []
@@ -316,7 +308,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "c056f615-c338-4bb5-a9d2-2c659d00f454",
    "metadata": {},
    "outputs": [
@@ -591,7 +583,7 @@
        "[5 rows x 153 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "cbf3b8be-8455-44ea-abda-59837183de66",
    "metadata": {},
    "outputs": [
@@ -620,9 +612,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.21915131 0.33206138 0.42858152 0.49193792 0.54498343]\n",
-      "0.5449834330067128\n",
-      "[0.21915131 0.11291007 0.09652014 0.0633564  0.05304552]\n"
+      "[0.21915131 0.33206138 0.42858152 0.49193792 0.54498376]\n",
+      "0.5449837611828414\n",
+      "[0.21915131 0.11291007 0.09652014 0.0633564  0.05304584]\n"
      ]
     }
    ],
@@ -739,7 +731,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
+   "id": "60bf03be-a562-4ed8-9414-4dc5d7dd8c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# 將專案的根目錄加入 sys.path\n",
+    "project_path = os.path.abspath(os.path.dirname('/Users/wangqiqian/Desktop/TrafficTDApython/Version3'))  # 專案的根目錄\n",
+    "sys.path.append(project_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "62ebfe06-7d7d-4fd9-b985-931fc2900963",
    "metadata": {},
    "outputs": [
@@ -747,34 +754,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11/17/2024 08:59:06 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:07 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:08 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:09 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
-      "11/17/2024 08:59:11 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
-      "11/17/2024 08:59:13 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
-      "11/17/2024 08:59:13 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
-      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
-      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
-      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:15 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
-      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
-      "11/17/2024 08:59:16 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
-      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
-      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
-      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
-      "11/17/2024 08:59:17 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
-      "11/17/2024 08:59:18 AM clustering WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
-      "11/17/2024 08:59:19 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
-      "11/17/2024 08:59:19 AM clustering WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 2 leaves.\n"
+      "11/17/2024 05:49:36 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:49:36 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:49:40 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:49:42 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 05:49:47 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 05:49:49 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 05:49:51 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
+      "11/17/2024 05:49:54 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 5 leaves.\n",
+      "11/17/2024 05:49:56 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 05:49:56 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:49:57 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:49:57 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
+      "11/17/2024 05:50:00 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 3 leaves.\n",
+      "11/17/2024 05:50:00 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 05:50:01 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 05:50:01 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 6 leaves.\n",
+      "11/17/2024 05:50:01 PM core WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
+      "11/17/2024 05:50:02 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 4 leaves.\n",
+      "11/17/2024 05:50:04 PM core WARNING: Unable to perform clustering on local chart: Found array with 1 sample(s) (shape=(1, 151)) while a minimum of 2 is required by AgglomerativeClustering.\n",
+      "11/17/2024 05:50:05 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 9 leaves.\n",
+      "11/17/2024 05:50:06 PM core WARNING: Unable to perform clustering on local chart: Cannot extract more clusters than samples: 10 clusters where given for a tree with 2 leaves.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.429375886917114\n"
+      "51.370049715042114\n"
      ]
     }
    ],
@@ -800,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "7378f777-4701-4a73-99f1-82a61ec14739",
    "metadata": {
     "tags": []
@@ -815,7 +822,7 @@
     "    # agg = most_frequent_nonan,\n",
     "    agg = average_encoded_label,\n",
     "    dim = 3,\n",
-    "    iterations = 100,\n",
+    "    iterations = 200,\n",
     "    seed = 6,\n",
     "    width = 800,\n",
     "    height = 500)"
@@ -823,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "8c2d4b32-5829-4c5d-971c-68cf2c931b36",
    "metadata": {},
    "outputs": [],
@@ -834,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "12ce97d2-a6f2-4ab7-b976-666a486d3625",
    "metadata": {},
    "outputs": [
@@ -848,7 +855,7 @@
        "Name: 死亡, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,35 +866,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cf88bf13-a4af-430f-89f6-3144999333e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matching_columns = [col for col in data_to_map.columns if \"死亡\" in col]\n",
-    "matching_columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "id": "e5169998-6b3e-4f02-b8d1-5b1e66d56676",
    "metadata": {},
    "outputs": [],
    "source": [
     "# mapper_plot1.update(\n",
-    "#     colors=rbind_data[['受傷']].to_numpy(),\n",
+    "#     colors=data_to_map[['號誌-號誌種類名稱_無號誌']].to_numpy(),\n",
     "#     cmap='jet', \n",
     "#     # agg=average_encoded_label,\n",
     "#     # agg = np.nanmean,\n",
@@ -943,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 40,
    "id": "1094011c-6b04-4ec1-8745-41c810c117c0",
    "metadata": {},
    "outputs": [],
@@ -978,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 45,
    "id": "376adaa5-9cbf-45ff-8b32-369dbaed3b6a",
    "metadata": {},
    "outputs": [
@@ -986,8 +971,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "01連接點數量 5\n"
+      "11\n",
+      "01連接點數量 0\n"
      ]
     },
     {
@@ -996,13 +981,13 @@
        "False"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calinski_data = get_calinski_from_db(full_info, 0.06)\n",
+    "calinski_data = get_calinski_from_db(full_info, 0.02)\n",
     "labels = calinski_data[3]\n",
     "db = calinski_data[2]\n",
     "n_clusters_ = calinski_data[4]\n",
@@ -1560,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
